Back to cm init, more props

--- a/init.ruby.rc
+++ b/init.ruby.rc
@@ -1,32 +1,24 @@
-on emmc
-
+on early-fs
     mkdir /system
     mkdir /data 0771 system system
     mkdir /cache 0770 system cache
     mkdir /devlog 0700 root root
-    devwait emmc@system
-	mount ext4 emmc@system /system ro
-        #mount ext4 emmc@system /system remount noauto_da_alloc
-        #mount ext4 emmc@system /system remount ro
-    devwait emmc@userdata
-	mount ext4 emmc@userdata /data noatime nosuid nodev nodelalloc
-        #mount ext4 emmc@userdata /data remount noauto_da_alloc
-        #mount ext4 emmc@userdata /data remount noatime nosuid nodev
-    devwait emmc@cache
-	mount ext4 emmc@cache /cache noatime nosuid nodev nodelalloc
-        #mount ext4 emmc@cache /cache remount noauto_da_alloc
-        #mount ext4 emmc@cache /cache remount noatime nosuid nodev
-    devwait emmc@devlog
-	mount ext4 emmc@devlog /devlog noatime nosuid nodev nodelalloc
-        #mount ext4 emmc@devlog /devlog remount noauto_da_alloc
-        #mount ext4 emmc@devlog /devlog remount noatime nosuid nodev
+    
+    mount ext4 /dev/block/mmcblk0p29 /system wait ro barrier=1
+    mount ext4 /dev/block/mmcblk0p31 /data wait noatime nosuid nodev barrier=1 noauto_da_alloc
+    mount ext4 /dev/block/mmcblk0p30 /cache wait noatime nosuid nodev barrier=1
+    mount ext4 /dev/block/mmcblk0p32 /devlog wait noatime nosuid nodev barrier=1
+    
+    device /dev/block/mmcblk0p16 0460 radio diag
 
-    # 8x60: mount radio partition and create links for modem/q6 firmwares
-    mkdir /vendor               0771 system system
-    mkdir /vendor/firmware      0771 system system
+on fs
+    devwait /dev/block/mmcblk0p17
+    rm /vendor
+    #8x60: mount radio partition and create links for modem/q6 firmwares
+    mkdir /vendor 0771 system system
+    mkdir /vendor/firmware 0771 system system
     mkdir /vendor/firmware/misc 0771 system system
-    devwait emmc@radio
-    mount vfat emmc@radio /vendor/firmware/misc ro shortname=lower
+    mount vfat /dev/block/mmcblk0p17 /vendor/firmware/misc ro shortname=lower
     symlink /vendor/firmware/misc/q6.b07 /vendor/firmware/q6.b07
     symlink /vendor/firmware/misc/q6.b06 /vendor/firmware/q6.b06
     symlink /vendor/firmware/misc/q6.b05 /vendor/firmware/q6.b05
@@ -49,8 +41,8 @@ on emmc
     symlink /vendor/firmware/misc/modem.b00 /vendor/firmware/modem.b00
     symlink /vendor/firmware/misc/modem.mdt /vendor/firmware/modem.mdt
     mkdir /vendor/firmware/misc_mdm 0771 system system
-    devwait emmc@mdm9k
-    mount vfat emmc@mdm9k /vendor/firmware/misc_mdm ro shortname=lower
+    devwait /dev/block/mmcblk0p18
+    mount vfat /dev/block/mmcblk0p18 /vendor/firmware/misc_mdm ro shortname=lower
     symlink /vendor/firmware/misc_mdm/image/amss.mbn /vendor/firmware/amss.mbn
     symlink /vendor/firmware/misc_mdm/image/dsp1.mbn /vendor/firmware/dsp1.mbn
     symlink /vendor/firmware/misc_mdm/image/dsp2.mbn /vendor/firmware/dsp2.mbn
@@ -61,13 +53,11 @@ on emmc
     symlink /vendor/firmware/misc_mdm/image/amss.mbn /vendor/firmware/amss.mbn
     symlink /vendor/firmware/misc_mdm/image/htcssmem.mbn /vendor/firmware/htcssmem.mbn
 
-on post-fs
+on init
     wait /dev/ttyHSL1
     mkdir /data/qcks 0770 system system
 	exec /system/bin/logwrapper /system/bin/htc_ext4_fsck
 
-on early-init
-    device /dev/block/mmcblk0p16 0460 radio diag
 
 on init
     # double check the perms and set owner
