--- a/init.ruby.rc
+++ b/init.ruby.rc
@@ -153,20 +153,15 @@ on boot
 	chown radio radio /sys/module/htc_battery_8x60/parameters/phone_call
 	chmod 0660 /sys/module/htc_battery_8x60/parameters/phone_call
 	
-	# for LogMeIn_Rescue
-	chown nobody.shell ./RescueStarter
-	chmod 755 ./RescueStarter
-	chown nobody.shell ./RescueServer
-	chmod 755 ./RescueServer
 
-	# Discretix DRM
-    mkdir /data/DxDrm
-    mkdir /data/DxDrm/fuse
-    mkdir /data/DxDrm/Credentials
-    mkdir /data/DxDrm/Credentials/PlayReady
-	chmod 555 /data/DxDrm
-    copy /etc/DxPrdyProvisionObf.pkg /data/DxDrm/Credentials/PlayReady/DxPrdyProvisionObf.pkg
-    copy /etc/DxDrmConfig_Server.txt /data/DxDrm/DxDrmConfig_Server.txt
+#	# Discretix DRM
+#    mkdir /data/DxDrm
+#    mkdir /data/DxDrm/fuse
+#    mkdir /data/DxDrm/Credentials
+#    mkdir /data/DxDrm/Credentials/PlayReady
+#	chmod 555 /data/DxDrm
+#    copy /etc/DxPrdyProvisionObf.pkg /data/DxDrm/Credentials/PlayReady/DxPrdyProvisionObf.pkg
+#    copy /etc/DxDrmConfig_Server.txt /data/DxDrm/DxDrmConfig_Server.txt
 
 # btips DDB location
 	mkdir /data/btips 0777 bluetooth bluetooth
