--- a/init.rc
+++ b/init.rc
@@ -33,6 +33,8 @@ loglevel 3
 # create mountpoints
     mkdir /mnt 0775 root system
     mkdir /mnt/sdcard 0000 system system
+    mkdir /mnt/emmc 0000 system system
+    symlink /mnt/emmc /emmc
 
 # Create cgroup mount point for cpu accounting
     mkdir /acct
