--- a/ueventd.rc
+++ b/ueventd.rc
@@ -41,24 +41,24 @@
 /dev/input/*              0660   root       input
 /dev/eac                  0660   root       audio
 /dev/cam                  0660   root       camera
-/dev/pmem                 0660   system     graphics
-/dev/pmem_audio           0660   system     audio
-/dev/pmem_adsp*           0660   system     audio
-/dev/pmem_smipool*        0660   system     camera
+/dev/pmem                 0777   system     graphics
+/dev/pmem_audio           0777   system     audio
+/dev/pmem_adsp*           0777   system     audio
+/dev/pmem_smipool*        0777   system     camera
 /dev/pmem_camera*         0660   system     camera
-/dev/oncrpc/*             0777   root       system
-/dev/adsp/*               0660   system     audio
-/dev/snd/*                0660   system     audio
+/dev/oncrpc/*             0777   root       qcom_oncrpc
+/dev/adsp/*               0777   system     audio
+/dev/snd/*                0777   system     audio
 /dev/mt9t013              0660   system     system
 /dev/msm_camera/*         0660   system     system
-/dev/akm8976_daemon       0640   compass    system
-/dev/akm8976_aot          0640   compass    system
-/dev/akm8973_daemon       0640   compass    system
-/dev/akm8973_aot          0640   compass    system
-/dev/bma150               0640   compass    system
-/dev/cm3602               0640   compass    system
-/dev/akm8976_pffd         0640   compass    system
-/dev/lightsensor          0640   system     system
+/dev/akm8976_daemon       0777   compass    system
+/dev/akm8976_aot          0777   compass    system
+/dev/akm8973_daemon       0777   compass    system
+/dev/akm8973_aot          0777   compass    system
+/dev/bma150               0777   compass    system
+/dev/cm3602               0777   compass    system
+/dev/akm8976_pffd         0777   compass    system
+/dev/lightsensor          0777   system     system
 /dev/radio0               0644   fm_radio   fm_radio
 /dev/i2c-2                0664   root       system
 /dev/i2c-4                0664   root       system
@@ -73,6 +73,8 @@
 /dev/msm_audpre           0660   system     audio
 /dev/msm_audio_ctl        0660   system     audio
 /dev/htc-acoustic         0660   system     audio
+/dev/htc-portlist         0777   root       root
+/dev/htcdiag              0777   radio      radio
 /dev/vdec                 0660   system     audio
 /dev/tzcom                0660   system     audio
 /dev/qce                  0660   system     audio
@@ -81,47 +83,52 @@
 /dev/snd/dsp1             0660   system     audio
 /dev/snd/mixer            0660   system     audio
 /dev/msm_pcm_lp_dec       0660   system     audio
-/dev/smd0                 0640   radio      radio
-/dev/smd7                 0640   radio      radio
-/dev/smdcntl0             0640   radio      radio
-/dev/smdcntl1             0640   radio      radio
-/dev/smdcntl2             0640   radio      radio
-/dev/smdcntl3             0640   radio      radio
-/dev/smdcntl4             0640   radio      radio
-/dev/smdcntl5             0640   radio      radio
-/dev/smdcntl6             0640   radio      radio
-/dev/smdcntl7             0640   radio      radio
-/dev/sdioctl0             0640   radio      radio
-/dev/sdioctl1             0640   radio      radio
-/dev/sdioctl2             0640   radio      radio
-/dev/sdioctl3             0640   radio      radio
-/dev/sdioctl4             0640   radio      radio
-/dev/sdioctl4             0640   radio      radio
-/dev/sdioctl5             0640   radio      radio
-/dev/sdioctl6             0640   radio      radio
-/dev/sdioctl7             0640   radio      radio
-/dev/sdioctl8             0640   radio      radio
-/dev/rmnet_ctrl           0640   radio      radio
+/dev/smd0                 0777   radio      radio
+/dev/smd7                 0777   radio      radio
+/dev/smdcntl0             0777   radio      radio
+/dev/smdcntl1             0777   radio      radio
+/dev/smdcntl2             0777   radio      radio
+/dev/smdcntl3             0777   radio      radio
+/dev/smdcntl4             0777   radio      radio
+/dev/smdcntl5             0777   radio      radio
+/dev/smdcntl6             0777   radio      radio
+/dev/smdcntl7             0777   radio      radio
+/dev/sdioctl0             0777   radio      radio
+/dev/sdioctl1             0777   radio      radio
+/dev/sdioctl2             0777   radio      radio
+/dev/sdioctl3             0777   radio      radio
+/dev/sdioctl4             0777   radio      radio
+/dev/sdioctl4             0777   radio      radio
+/dev/sdioctl5             0777   radio      radio
+/dev/sdioctl6             0777   radio      radio
+/dev/sdioctl7             0777   radio      radio
+/dev/sdioctl8             0777   radio      radio
+/dev/sdiotty0             0777   root       root
+/dev/rmnet_ctrl           0777   radio      radio
 /dev/qemu_trace           0666   system     system
-/dev/qmi                  0640   radio      radio
-/dev/qmi0                 0640   radio      radio
-/dev/qmi1                 0640   radio      radio
-/dev/qmi2                 0640   radio      radio
+/dev/qmi                  0777   radio      radio
+/dev/qmi0                 0777   radio      radio
+/dev/qmi1                 0777   radio      radio
+/dev/qmi2                 0777   radio      radio
 /dev/bus/usb/*            0660   root       usb
 /dev/gemini0              0660   system     system
-/dev/mdm                  0660   system     system
-/dev/ttyHSL1              0660   system     system
-/dev/tty_sdio_00          0660   system     system
-/dev/block/mmcblk0        0440   system     system
-/dev/block/mmcblk0p19     0660   system     system
-/dev/block/mmcblk0p20     0660   system     system
-/dev/block/mmcblk0p21     0660   system     system
+/dev/mdm                  0777   system     system
+/dev/ttyHSL1              0777   system     system
+/dev/tty_sdio_00          0777   system     system
+/dev/block/mmcblk0        0770   system     system
+/dev/block/mmcblk0p19     0777   system     system
+/dev/block/mmcblk0p20     0777   system     system
+/dev/block/mmcblk0p21     0777   system     system
+/dev/block/mmcblk0p25     0777   system     system
+/dev/block/mmcblk0p26     0777   system     system
+/dev/block/mmcblk0p27     0777   system     system
+/dev/block/mmcblk0p28     0777   system     system
 /dev/usb_accessory        0660   root       usb
 
 # CDMA radio interface MUX
-/dev/ts0710mux*           0640   radio      radio
+/dev/ts0710mux*           0777   radio      radio
 /dev/ppp                  0660   radio      vpn
-/dev/tun                  0640   vpn        vpn
+/dev/tun                  0777   vpn        vpn
 
 # sysfs properties
 /sys/devices/virtual/input/input*   enable      0660  root   input
@@ -145,6 +152,6 @@
 /dev/msm_qcelp_in         0660  system       audio
 /dev/msm_evrc_in          0660  system       audio
 /dev/msm_preproc_ctl      0660  system       audio
-/dev/msm_a2dp_in          0640  system       audio
-/dev/msm_amrnb_in         0640  system       audio
+/dev/msm_a2dp_in          0777  system       audio
+/dev/msm_amrnb_in         0777  system       audio
 /sys/devices/virtual/usb_composite/*   enable      0664  root   system
